# pong-opengl

./: CMakeLists.txt  README.md
include/: glerrors.h  objparser.h  shaders.h
src/: glerrors.cpp  main.cpp  objparser.cpp  shaders.cpp
